--- a/chartmath302limit.ipynb
+++ b/chartmath302limit.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath302limit.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMiXTmlepGDkXh8J3lXEM83",
+      "authorship_tag": "ABX9TyOUOmllvBbAmnB1e3RDTk6O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,12 +175,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mPvP7INhSV7r",
-        "outputId": "24cfbb42-31ca-4c6c-a0c4-117d134ad7a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "id": "mPvP7INhSV7r",
+        "outputId": "24cfbb42-31ca-4c6c-a0c4-117d134ad7a4"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -221,12 +221,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y4F4pCyAAUg2",
-        "outputId": "1dff1a2d-3b96-4734-bee3-da7b2826f3a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        }
+        },
+        "id": "Y4F4pCyAAUg2",
+        "outputId": "1dff1a2d-3b96-4734-bee3-da7b2826f3a2"
       },
       "source": [
         "# 基本例題 14 p.30\n",
@@ -264,12 +264,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PmM6bI1nA7-t",
-        "outputId": "e49a3296-8c00-4cba-9bbe-ef718adfec65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
-        }
+        },
+        "id": "PmM6bI1nA7-t",
+        "outputId": "e49a3296-8c00-4cba-9bbe-ef718adfec65"
       },
       "source": [
         "# 基本例題 14 p.30\n",
@@ -309,12 +309,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oYjUs-y2BUr4",
-        "outputId": "317eaea4-179b-4b22-bf67-369e3e8f4e01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
-        }
+        },
+        "id": "oYjUs-y2BUr4",
+        "outputId": "317eaea4-179b-4b22-bf67-369e3e8f4e01"
       },
       "source": [
         "# (5)\n",
@@ -375,23 +375,14 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HLzBdtMUTL_Z"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "FgsJRtmLMJOi",
-        "outputId": "ffda2c3d-04b4-410d-ddec-253299f65646",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        }
+        },
+        "id": "FgsJRtmLMJOi",
+        "outputId": "ffda2c3d-04b4-410d-ddec-253299f65646"
       },
       "source": [
         "# 練習 p.30\n",
@@ -443,12 +434,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jSHUOR_RRTv9",
-        "outputId": "cb356394-5baf-40a7-b7c8-5a23842193ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 72
-        }
+          "height": 92
+        },
+        "id": "jSHUOR_RRTv9",
+        "outputId": "2a905094-18ec-41cd-afb4-bdf38953d791"
       },
       "source": [
         "# 練習 p.30\n",
@@ -456,9 +447,10 @@
         "from sympy import *\n",
         "display([n+1 for n in range(5)])\n",
         "display([n+2 for n in range(5)])\n",
-        "display([sqrt((n+1)/Rational(n+2))for n in range(5)])"
+        "display([sqrt((n+1)/Rational(n+2))for n in range(5)])\n",
+        "limit(sqrt((n+1)/(n+2)),n,oo) #=> 1 に収束"
       ],
-      "execution_count": 111,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "display_data",
@@ -492,24 +484,265 @@
           "metadata": {
             "tags": []
           }
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 1$",
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 122
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GAm_HQ8dSHV_"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "id": "GAm_HQ8dSHV_",
+        "outputId": "0923ba0d-52b2-4944-8817-93e354179c95"
       },
       "source": [
         "# 練習 p.30\n",
-        "# (2)\n",
+        "# (3)\n",
         "from sympy import *\n",
-        "display([n+1 for n in range(5)])\n",
-        "display([n+2 for n in range(5)])\n",
-        "display([sqrt((n+1)/Rational(n+2))for n in range(5)])"
+        "display([n*2+1 for n in range(5)])\n",
+        "display([(-1)**n for n in range(5)])\n",
+        "display([(n*2+1)*(-1)**n for n in range(5)]) #=> 発散、振動"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1, 3, 5, 7, 9]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1, -1, 1, -1, 1]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1, -3, 5, -7, 9]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5vDUX9bqXhmL",
+        "outputId": "3e524e76-e5a5-426d-c35b-1c9274fb7f44",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        }
+      },
+      "source": [
+        "# 練習 p.30\n",
+        "# (4)\n",
+        "from sympy import *\n",
+        "display([(n+1)**3 for n in range(5)])\n",
+        "display([(-1)**n for n in range(5)])\n",
+        "display([((n+1)**3)*(-1)**n for n in range(5)]) #=> 発散、振動"
+      ],
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1, 8, 27, 64, 125]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1, -1, 1, -1, 1]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1, -8, 27, -64, 125]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XHPyE006X678",
+        "outputId": "4f8af392-34d6-426a-8490-bd5e6a3a6c9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
+      },
+      "source": [
+        "# 練習 p.30\n",
+        "# (5)\n",
+        "# [2/3, -1/2, -8/9, -13/12]\n",
+        "# [2/3, -3/6, -8/9, -13/12]\n",
+        "display([2-n*5 for n in range(5)])\n",
+        "display([n*3+3 for n in range(5)])\n",
+        "display([(2-n*5)/Rational(n*3+3 ) for n in range(5)]) \n",
+        "limit((2-n*5)/(n*3+3),n,oo) #=> -5/3に収束"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[2, -3, -8, -13, -18]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[3, 6, 9, 12, 15]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[2/3, -1/2, -8/9, -13/12, -6/5]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle - \\frac{5}{3}$",
+            "text/plain": [
+              "-5/3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 146
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HLzBdtMUTL_Z"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yx5XcHQDd2vK",
+        "outputId": "aca9cf0b-04dd-4c88-ecca-dbef26bb6aa7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 57
+        }
+      },
+      "source": [
+        "# 基本例題 15 p.31\n",
+        "# (1)\n",
+        "display(limit(3*n-n**3,n,oo)) #=> -oo\n",
+        "# (2)\n",
+        "display(limit((2*n**2-3)/(n**2+1),n,oo)) #=> 2 に収束\n",
+        "# (3)"
+      ],
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle -\\infty$",
+            "text/plain": [
+              "-oo"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 2$",
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mQk5jlozd2gY"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
