--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPDAi6sx0/v5BJRkx3XAz0z",
+      "authorship_tag": "ABX9TyMgPNkdeikCJcUJGMp2Clj6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1026,7 +1026,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1049,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1096,7 +1096,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1119,7 +1119,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,7 +1163,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1186,7 +1186,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,15 +1202,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "JGHWrEGFhiKX"
-      }
     },
     {
       "cell_type": "code",
@@ -1245,7 +1236,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1268,7 +1259,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1280,6 +1271,175 @@
             "0.003142\n",
             "3.141592653590\n",
             "0.003141592654\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# string\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    // 例 1: 入力した 2 つの文字列を連結して、最初の 10 文字を出力します。\n",
+        "    string a, b;\n",
+        "    cin >> a >> b;\n",
+        "    string c = a + b;\n",
+        "    if (c.size() <= 10) cout << c << endl;\n",
+        "    else cout << c.substr(0, 10) << endl;\n",
+        "\n",
+        "    // 例 2: 入力した文字列 s の偶数文字目を 'z' に変えて出力します。\n",
+        "    string s;\n",
+        "    cin >> s;\n",
+        "    for (int i = 0; i < s.size(); i += 2) s.at(i) = 'z';\n",
+        "    cout << s << endl;\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "J-cUDKKFiSdc",
+        "outputId": "ce6c1e23-9e34-49c5-d9d5-4e8508a0b2c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo \"try\" \"012345\" \"012345\"|./a.out"
+      ],
+      "metadata": {
+        "id": "NSfYWPfmiSXj",
+        "outputId": "2155bc61-9996-4a36-ceaf-860e87bf60c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "try012345\n",
+            "z1z3z5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "JGHWrEGFhiKX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 上のプログラムを日本語対応にしてみる\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int count_byte(char c){\n",
+        "    if ((c & 0x80) == 0) return 1;\n",
+        "    else if ((c & 0xe0) == 0xc0) return 2;\n",
+        "    else if ((c & 0xf0) == 0xe0) return 3;\n",
+        "    else return 4;\n",
+        "}\n",
+        "\n",
+        "vector<string> str2vec(string &str){\n",
+        "    vector<string> vec;\n",
+        "    for (int i = 0 ; i < str.size(); i += count_byte(str.at(i))){\n",
+        "        vec.push_back(str.substr(i,count_byte(str.at(i))));\n",
+        "    }    \n",
+        "    return vec;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    string str;\n",
+        "    getline(cin, str);\n",
+        "    vector<string> vec;\n",
+        "    vec = str2vec(str);\n",
+        "    for (auto& item : vec) {\n",
+        "        cout << item;\n",
+        "    };\n",
+        "    cout << endl;\n",
+        "    cout << \"文字列の長さは \" << vec.size() << \" です。\" << endl;\n",
+        "}\n",
+        "/*\n",
+        "int main() {\n",
+        "    // 例 1: 入力した 2 つの文字列を連結して、最初の 10 文字を出力します。\n",
+        "    string a, b;\n",
+        "    cin >> a >> b;\n",
+        "    string c = a + b;\n",
+        "    if (c.size() <= 10) cout << c << endl;\n",
+        "    else cout << c.substr(0, 10) << endl;\n",
+        "\n",
+        "    // 例 2: 入力した文字列 s の偶数文字目を 'z' に変えて出力します。\n",
+        "    string s;\n",
+        "    cin >> s;\n",
+        "    for (int i = 0; i < s.size(); i += 2) s.at(i) = 'z';\n",
+        "    cout << s << endl;\n",
+        "    return 0;\n",
+        "}\n",
+        "*/"
+      ],
+      "metadata": {
+        "id": "ZQWFUWz_j4Vf",
+        "outputId": "8712fe5b-b2bf-4803-a573-96964b9ee836",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo \"施行\" \"錯誤してみる\" \"難しいね!!!!\"|./a.out"
+      ],
+      "metadata": {
+        "id": "XD4IVJMUj4QG",
+        "outputId": "42ad7c65-a358-4036-cacd-0e26f43fc90b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "施行 錯誤してみる 難しいね!!!!\n",
+            "文字列の長さは 18 です。\n"
           ]
         }
       ]
