--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOvGnqjlvCpyniNtGWG+OVU",
+      "authorship_tag": "ABX9TyNjQ9ViZcgOkZAumuSzIwNU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4466,7 +4466,7 @@
         },
         "outputId": "c6ba79e5-8af4-4fb3-a57a-9dbaa982d1ee"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4495,7 +4495,7 @@
         "!ghc -e '[x*2 | x <- [1..10], x*2 >= 12]'\n",
         "!ghc -e '[ x | x <- [50..100], x `mod` 7 == 3]'"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4520,7 +4520,7 @@
       "source": [
         "!ghc -e 'let boomBangs xs = [ if x < 10 then \"BOOM!\" else \"BANG!\" | x <- xs, odd x] in boomBangs [7..13]'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4543,7 +4543,7 @@
       "source": [
         "!ghc -e '[ x | x <- [10..20], x /= 13, x /= 15, x /= 19]'"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4567,7 +4567,7 @@
         "!ghc -e '[ x*y | x <- [2,5,10], y <- [8,10,11]] '\n",
         "!ghc -e '[ x*y | x <- [2,5,10], y <- [8,10,11], x*y > 50]'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4592,7 +4592,7 @@
         "!ghc -e '[ (x, y) | x <- [2,5,10], y <- [8,10,11]] '\n",
         "!ghc -e '[ [x, y] | x <- [2,5,10], y <- [8,10,11]] '"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4616,7 +4616,7 @@
       "source": [
         "!ghc -e 'let {nouns = [\"hobo\",\"frog\",\"pope\"]; adjectives = [\"lazy\",\"grouchy\",\"scheming\"]} in [adjective ++ \" \" ++ noun | adjective <- adjectives, noun <- nouns]'"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4640,7 +4640,7 @@
         "# 日本語でやってみたら、文字化けしてしまった\n",
         "!ghc -e 'let {nouns = [\"流れもの\",\"カエル\",\"坊主\"]; adjectives = [\"なまけものの\",\"文句たれの\",\"ずるい\"]} in [adjective ++ noun | adjective <- adjectives, noun <- nouns]'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4664,7 +4664,7 @@
         "# 実験 putStrLn で取り出す\n",
         "!ghc -e 'let {nouns = [\"流れもの\",\"カエル\",\"坊主\"]; adjectives = [\"なまけものの\",\"文句たれの\",\"ずるい\"]} in mapM_ putStrLn [adjective ++ noun | adjective <- adjectives, noun <- nouns]'"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4703,7 +4703,7 @@
         "    putStrLn (adjectiveplusnouns!!0)\n",
         "    mapM_ putStrLn adjectiveplusnouns"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4726,7 +4726,7 @@
       "source": [
         "!runghc adjective_temp.hs"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4759,7 +4759,7 @@
         "# length を実装する\n",
         "!ghc -e 'let length01 xs = sum [1 | _ <- xs] in print (length01 [1,2,3])'"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4783,7 +4783,7 @@
         "id": "FCyzK3WpvbHf",
         "outputId": "b9432e74-1e35-4ea5-b2da-035bef3d66fc"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4806,7 +4806,7 @@
       "source": [
         "!ghc -e $'let removeNonUppercase st = [ c | c <- st, elem c [\\'A\\'..\\'Z\\']] in putStrLn(removeNonUppercase \"IdontLIKEFROGS\")'"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4834,7 +4834,7 @@
         "        newlist =  [ [ x | x <- xs, even x ] | xs <- xxs] \n",
         "    print newlist"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4857,7 +4857,7 @@
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4883,7 +4883,7 @@
         "    let xxs = [[1,3,5,2,3,1,2,4,5],[1,2,3,4,5,6,7,8,9],[1,2,4,2,1,6,3,1,3,2,3,6]] \\\n",
         "        in  [ [ x | x <- xs, even x ] | xs <- xxs]'"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4918,7 +4918,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4936,7 +4936,7 @@
       },
       "source": [
         "# これと遅延評価を利用すると、長いリストを扱える\n",
-        "!ghc -e '[ (a,b,c) | c <- [1..10], b <- [1..c], a <- [1..b], a^2 + b^2 == c^2, a+b+c == 24]'\n"
+        "!ghc -e '[ (a,b,c) | c <- [1..10], b <- [1..c], a <- [1..b], a^2 + b^2 == c^2, a+b+c == 24]'"
       ],
       "execution_count": null,
       "outputs": []
@@ -4944,66 +4944,68 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MW4PBj0KSTca"
+        "id": "MW4PBj0KSTca",
+        "outputId": "3cd14371-7c3f-446c-b97c-400f721ff413",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
+        "# 重複あり全探索 2^n\n",
         "!ghc -e 'take 10 [ (a,b,c) | c <- [1..10], b <- [1..c], a <- [1..b]]'"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "MykKGye5w1HI"
-      },
-      "source": [
-        "# 型 type と 型クラス type class"
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[(1,1,1),(1,1,2),(1,2,2),(2,2,2),(1,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(3,3,3)]\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "MAE7s1W9wn2b"
-      },
       "source": [
+        "# 型と型クラス\n",
         "!ghc -e $':t \\'a\\''\n",
         "!ghc -e $':t True'\n",
         "!ghc -e $':t \"HELLO!\"'\n",
         "!ghc -e $':t (True, \\'a\\')'\n",
         "!ghc -e $':t 4 == 5'"
       ],
+      "metadata": {
+        "id": "MykKGye5w1HI"
+      },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QNN-nWJBW7Gp"
-      },
-      "source": [
-        ":: は (の)型(は) (has type of) と読む。\n"
-      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "-MlynYqMYOJk"
-      },
       "source": [
-        "!ghc -e $':t (\\'a\\',\\'b\\',\\'c\\')'\n",
-        "!ghc -e $':t [\\'a\\',\\'b\\',\\'c\\']'"
+        "# :: は (の)型(は) (has type of) と読む。\n",
+        "# 上のセルの一行目はタプルで、二行目がリスト。\n",
+        "!ghc -e \":t ('a','b','c')\"\n",
+        "!ghc -e \":t ['a','b','c']\""
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
-        "id": "aynmNzHYYjfR"
+        "id": "QNN-nWJBW7Gp",
+        "outputId": "83240856-87a9-4c54-d2fb-9586ddd7a45f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [
-        "上のセルの一行目はタプルで、二行目がリスト。"
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('a','b','c') :: (Char, Char, Char)\n",
+            "['a','b','c'] :: [Char]\n"
+          ]
+        }
       ]
     },
     {
